--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <title>Triangle Tracker</title>
 </head>
 <body>
-  
+  <h1>Triangle Tracker</h1>
+  <form id="triangle">
+    <label>Enter length of side one:</label>
+    <input id="side1">
+    <label>Enter length of side two:</label>
+    <input id="side2">
+    <label>Enter length of side three:</label>
+    <input id="side3">
+    <button type="submit" class="btn-dark">submit</button>
+  </form>
+
+  <div id="equilateral">
+    <p>Your triangle is an equilateral.</p>
+  </div>
+  <div id="isosceles">
+    <p>Your triangle is an isosceles.</p>
+  </div>
+  <div id="scalene">
+    <p>Your triangle is a scalene.</p>
+  </div>
+  <div id="not-triangle">
+    <p>This is not a triangle.</p>
+  </div>
+
 </body>
 </html>
