WIP- add invalid feedback.
Co-Authored-by: Jessica Baker <jessb.epicodus@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <form id="triangle">
     <label>Enter length of side one:</label>
     <input id="side1">
+    <div class="invalid-feedback"><p>please enter a whole number</p></div>
     <label>Enter length of side two:</label>
     <input id="side2">
+    <div class="invalid-feedback"><p>please enter a whole number</p></div>
     <label>Enter length of side three:</label>
     <input id="side3">
+    <div class="invalid-feedback"><p>please enter a whole number</p></div>
     <button type="submit" class="btn-dark">submit</button>
   </form>
 
